6 April 2020: George
	- More documentation for redis-expire-records option.

1 April 2020: George
	- Merge PR #206: Redis TTL, by Talkabout.

30 March 2020: Wouter
	- Merge PR #207: Clarify if-automatic listens on 0.0.0.0 and ::
	- Merge PR #208: Fix uncached CLIENT_RESPONSE'es on stateful
	  transports.

27 March 2020: Wouter
	- Merge PR #203 from noloader: Update README-Travis.md with current
	  procedures.

27 March 2020: Ralph
	- Make unbound-control error returned on missing domain name more user
	  friendly.

26 March 2020: Ralph
	- Fix RPZ concurrency issue when using auth_zone_reload.

25 March 2020: George
	- Merge PR #201 from noloader: Fix OpenSSL cross-compaile warnings.
	- Fix on #201.

24 March 2020: Wouter
	- Merge PR #200 from yarikk: add ip-dscp option to specify the DSCP
	  tag for outgoing packets.
	- Fixes on #200.
	- Travis fix for ios by omitting tools from install.

23 March 2020: Wouter
	- Fix compile on Solaris for unbound-checkconf.

20 March 2020: George
	- Merge PR #198 from fobser: Declare lz_enter_rr_into_zone() static, it's
	  only used in this file.

20 March 2020: Wouter
	- Merge PR #197 from fobser: Make log_ident_revert_to_default() a
	  proper prototype.

19 March 2020: Ralph
	- Merge PR#191: Update iOS testing on Travis, by Jeffrey Walton.
	- Fix #158: open tls-session-ticket-keys as binary, for Windows. By
	  Daisuke HIGASHI.
	- Merge PR#134, Allow the kernel to provide random source ports. By
	  Florian Obser.
	- Log warning when using outgoing-port-permit and outgoing-port-avoid
	  while explicit port randomisation is disabled.
	- Merge PR#194: Add libevent testing to Travis, by Jeffrey Walton.
	- Fix .travis.yml error, missing 'env' option.

16 March 2020: Wouter
	- Fix #192: In the unbound-checkconf tool, the module config of
	  dns64 subnetcache respip validator iterator is whitelisted, it was
	  reported it seems to work.

12 March 2020: Wouter
	- Fix compile of test tools without protobuf.

11 March 2020: Ralph