@@ -1,3 +1,7 @@
+6 April 2020: Ralph
+	- Keep track of number of timeouts. Use this counter to determine if
+	  capsforid fallback should be started.
+
 6 April 2020: George
 	- More documentation for redis-expire-records option.
 
